fixed grid spacing

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -16,7 +16,7 @@ h1 {
   padding: 3% 3% 0 3%;
   background-color: rgb(255, 255, 255);
   grid-column: 1 / 2;
-  grid-row: 1 / 18;
+  grid-row: 1 / 6;
   height: 100vh;
   border: 2px solid rgba(185, 185, 185, 0.432);
   overflow-y: scroll;
